# asterisk

./: .editorconfig  .gitignore  ARCHITECTURE.md  Cargo.toml  E2E-TEST-SUCCESS.md  EXTENSION_RELOAD_REQUIRED.md  LLM-MATCHING-TEST-RESULTS.md  LLM-TESTING-GUIDE.md  PHASE-4-FIX-SUMMARY.md  POPUP-ENHANCEMENT-TESTING.md  PR1_TRUST_UX_PROMPT.md  README.md  READY-TO-TEST.md  ROADMAP.md  SECURITY.md  SESSION-SUMMARY.md  UX-IMPROVEMENTS.md  package.json  pnpm-lock.yaml  setup-test-vault.sh  test-api-key.sh  test-llm-form.html  turbo.json
.claude/: settings.json
.claude/tsc-cache/7ddb104f-5647-4c48-8ae0-997e9b9a1fb9/: commands.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  extension-tests.yml  release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.css  App.tsx  AuditTab.tsx  FormsTab.tsx  MatchingPanel.tsx  SettingsTab.tsx  index.css  llm-matching.ts  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: .gitkeep  icon.icns
apps/desktop/src-tauri/src/: lib.rs  llm.rs  main.rs
apps/extension/: package.json  test-form-advanced.html  test-form.html  tsconfig.json  verify-extension.sh  vite.config.ts
apps/qa/: .gitignore  E2E_TESTING_GUIDE.md  EXTENSION-TESTING-GUIDE.md  NATIVE-EXTENSION-TESTING.md  QUICK-START-NATIVE-TESTING.md  README.md  TEST_REPORT.md  package.json  playwright.config.ts
crates/vault/: Cargo.toml
crates/vault/src/: lib.rs
docs/: ARCHITECTURE_DIAGRAMS.md  agent-teams-plan.md  architecture.md  data-separation.md  threat-model.md
(+59 files in other folders)
