[package]
name = "asterisk-vault"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Secure vault for user personal data"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
