[package]
name = "asterisk-desktop"
version = "0.1.0"
description = "Asterisk desktop application"
authors = ["Asterisk Contributors"]
license = "MPL-2.0"
repository = ""
edition = "2021"

[lib]
name = "asterisk_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
asterisk-vault = { path = "../../../crates/vault" }
chrono = { version = "0.4", features = ["serde"] }
# HTTP server for extension bridge
tiny_http = "0.12"
urlencoding = "2.1"
# System directory paths
dirs = "5"
# HTTP client for LLM API
reqwest = { version = "0.13", features = ["json"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
